# Beans-Core

./: .appveyor.yml  .cirrus.yml  .gitignore  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  REVIEWERS  SECURITY.md  autogen.sh  configure.ac  libbeansconsensus.pc.in
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.tx/: config
build_msvc/: .gitignore  README.md  beans.sln  beans_config.h  libsecp256k1_config.h  msvc-autogen.py  vcpkg.json
ci/: lint_run_all.sh  test_run_all.sh
contrib/: README.md  beans-cli.bash-completion  beans-tx.bash-completion  beansd.bash-completion  filter-lcov.py  gitian-build.py  install_db4.sh  valgrind.supp
depends/: Makefile  README.md  description.md  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  beans-conf.md  benchmarking.md  bips.md  build-android.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  external-signer.md  files.md  fuzzing.md  gitian-building.md  guix.md  init.md  multiprocess.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  zmq.md
doc/man/: Makefile.am  beans-cli.1  beans-qt.1  beans-tx.1  beans-util.1  beans-wallet.1  beansd.1
share/: genbuild.sh  setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.crc32c.include  (+162 more)
(+1208 files in other folders)
