dist_man1_MANS=

if BUILD_BEANSD
  dist_man1_MANS+=beansd.1
endif

if ENABLE_QT
  dist_man1_MANS+=beans-qt.1
endif

if BUILD_BEANS_CLI
  dist_man1_MANS+=beans-cli.1
endif

if BUILD_BEANS_TX
  dist_man1_MANS+=beans-tx.1
endif

if BUILD_BEANS_UTIL
  dist_man1_MANS+=beans-util.1
endif

if ENABLE_WALLET
if BUILD_BEANS_WALLET
  dist_man1_MANS+=beans-wallet.1
endif
endif
